--- a/who.html
+++ b/who.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--typical title for a make beleive bike company-->
     <title>Jim Bob's Bikes</title>
+    <link rel="stylesheet" href="css/JBs.css" type="text/css">
     
 </head>
 <body>
     <header>
-         <!-- i used the store name in the header as a logo of sorts. I used the sup because many companies trademark their name. i used an entity code for tm i could have just used superscript within the h1, but that isn't as much fun. -->
-         <h1>Jim Bob's New and Used Bikes&trade;</h1>
+        <!-- i used the store name in the header as a logo of sorts. I used the sup because many companies trademark their name. i used an entity code for tm i could have just used superscript within the h1, but that isn't as much fun. -->
+        <h1>Jim Bob's New and Used Bikes&trade;</h1>
         <h4>Bikes so cheap, you'll freak!</h4>
-        <!--I added a nav to show the use of a semantic tag-->
+        <!--I adde a nav to show the use of a semantic tag-->
         <nav>
             <a href="index.html">HOME |</a>
             <a href="bikes.html">BIKES |</a>
@@ -22,7 +23,7 @@
     </header>
         <main>
             <!-- added a list with the images inside. This works like an inline as well. If you used the paragraph tag it would wrap.-->
-            <ul>
+            <ul id="owners">
                 <li>Jim Bob - Owner <img src="assets/jimBob.jpg" width="100px"/></li>
                 <li>Billy Bob - Mechanic <img src="assets/billyBob.jpg" width="100px"/></li>
             </ul>
