--- a/contact.html
+++ b/contact.html
@@ -22,13 +22,13 @@
             </nav>
         </header>
         <main>
-           <h3>CONTACT US NOW!!!!!</h3>
+           <h3 id="contactUs">CONTACT US NOW!!!!!</h3>
            <!--my form. Notice that the paragraph and input tags block-->
            <form>
-            <p>Your Name</p><input type="text" value="" name="name"  placeholder="Jim Bob" >
-            <p>Number</p><input type="text" value="" name="number" placeholder="555-867-5309">
+            <p class="callOut">Your Name</p><input type="text" value="" name="name"  placeholder="Jim Bob" >
+            <p class="callOut">Number</p><input class="inputInfo" type="text" value="" name="number" placeholder="555-867-5309">
             <h4>Are you interested in buying a bike?</h4> <p>Yes I would like to buy a bike from Jim Bob!</p><input type="radio" name="yesBuy">
-            <p>Chances are we won't call you back, but just in case go ahead and submit</p><input type="submit">
+            <p>Chances are we won't call you back, but just in case go ahead and submit</p><input class="form-submit-button" type="submit">
            </form>
         </main>
    
